# v2ray

./: .dockerignore  .env.vm  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  SECURITY.md  STABILITY_ADVERSARIAL_REPORT.md  TASK_C_REPORT.md  deny.toml  rust-toolchain.toml
benches/: Cargo.toml  perf-baseline.md
benches/benches/: framing_overhead.rs  protocol_handshake_latency.rs  protocol_matrix.rs  routing_dns_fakeip.rs  tcp_relay_throughput.rs
benches/scripts/: flamegraph-protocol.sh
benches/src/: harness.rs  lib.rs
black-ui/server/: Cargo.toml
black-ui/server/src/: app.rs  auth.rs  capabilities.rs  config.rs  db.rs  enforcement.rs  error.rs  firewall.rs  handlers.rs  main.rs  models.rs  runtime.rs  service.rs  state.rs  util.rs
crates/blackwire-api/: Cargo.toml  build.rs
crates/blackwire-api/src/: handler_service.rs  lib.rs  management.rs  server.rs  stats_service.rs
crates/blackwire-app/: Cargo.toml
crates/blackwire-app/src/: balancer.rs  context.rs  dispatcher.rs  dns.rs  features.rs  geo.rs  health.rs  lib.rs  metrics.rs  relay.rs  router.rs  runtime_stats.rs  sniff.rs
crates/blackwire-app/src/dns/: cache.rs  fakeip.rs  resolver.rs
crates/blackwire-app/src/geo/: geoip.rs  geosite.rs  loader.rs  proto.rs
crates/blackwire-cli/: Cargo.toml
crates/blackwire-cli/src/: main.rs
crates/blackwire-common/: Cargo.toml
crates/blackwire-common/src/: buf.rs  connect.rs  lib.rs  relay.rs  splice.rs  stream.rs
crates/blackwire-config/: Cargo.toml
crates/blackwire-config/src/: env.rs  lib.rs  manager.rs  schema.rs
crates/blackwire-config/src/schema/: endpoint.rs  logging_dns.rs  profile.rs  protocol.rs  routing.rs  transport.rs
crates/blackwire-config/tests/: fail_closed_schema.rs
crates/blackwire-core/: Cargo.toml
crates/blackwire-core/src/: http.rs  hysteria2.rs  lib.rs  outbound_transport.rs  reality.rs  reload.rs  ss2022.rs  trojan.rs  vmess.rs  ws_tls.rs
crates/blackwire-core/src/instance/: helpers.rs  mod.rs
crates/blackwire-core/tests/: config_fail_closed.rs  production_readiness.rs  reload_listeners.rs
crates/blackwire-protocol/: Cargo.toml
crates/blackwire-protocol/src/: freedom.rs  http_connect.rs  lib.rs  socks.rs  socks5_udp.rs  ss2022.rs  trojan.rs  vmess.rs
crates/blackwire-protocol/src/ss2022/: fuzzing.rs  inbound.rs  outbound.rs  stream.rs  subkey.rs  udp.rs  variable_header.rs
crates/blackwire-protocol/src/trojan/: codec.rs  inbound.rs  outbound.rs  udp.rs
crates/blackwire-protocol/src/vless/: codec.rs  inbound.rs  mod.rs  mux.rs  mux_client.rs  outbound.rs  registry.rs  udp.rs  vision.rs
crates/blackwire-protocol/tests/: fragmentation_parsers.rs  production_readiness.rs  stateful_parsers.rs
crates/blackwire-tls/: Cargo.toml
crates/blackwire-tls/src/: grease.rs  lib.rs  profile.rs
crates/blackwire-transport/: Cargo.toml
crates/blackwire-transport/src/: grpc.rs  httpupgrade.rs  hysteria2.rs  ktls.rs  lib.rs  pem.rs  quic.rs  reality.rs  shadowtls.rs  splithttp.rs  splithttp_packet_up.rs  tcp.rs  tls.rs  tun.rs  v2rayquic.rs  ws.rs
crates/blackwire-transport/tests/: interop.rs  production_readiness.rs  tun_priv.rs
crates/proxy-cli/: Cargo.toml
crates/proxy-cli/src/: main.rs
crates/proxy-core/: Cargo.toml
crates/proxy-core/src/: http.rs  hysteria2.rs  instance.rs  lib.rs  outbound_transport.rs  reality.rs  reload.rs  ss2022.rs  trojan.rs  vmess.rs  ws_tls.rs
crates/proxy-core/tests/: config_fail_closed.rs  production_readiness.rs
crates/proxy-protocol/: Cargo.toml
crates/proxy-protocol/src/: freedom.rs  http_connect.rs  lib.rs  socks.rs  ss2022.rs  trojan.rs
crates/proxy-protocol/tests/: fragmentation_parsers.rs  production_readiness.rs  stateful_parsers.rs
crates/proxy-transport/: Cargo.toml
crates/proxy-transport/src/: grpc.rs  hysteria2.rs  lib.rs  mkcp.rs  quic.rs  reality.rs  shadowtls.rs  tcp.rs  tls.rs  tun.rs  ws.rs
crates/proxy-transport/tests/: interop.rs  production_readiness.rs  tun_priv.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: hysteria2_frame.rs  reality_client_hello.rs  shadowtls_handshake.rs  ss2022_chunk.rs  stateful_sequences.rs  vless_header.rs  vmess_aead_header.rs
tests/: Cargo.toml
tests/adversarial/backpressure/: mod.rs
tests/adversarial/cancellation/: mod.rs
tests/adversarial/fragmentation/: protocols.rs
tests/adversarial/half_close/: mod.rs
tests/adversarial/large_frames/: mod.rs
tests/adversarial/task_pressure/: mod.rs
tests/adversarial/upstream_chaos/: mod.rs
tests/common/: harness.rs  leak_check.rs
tests/interop/: .gitignore  Makefile  README.md  docker-compose.yml
tests/interop/configs/: nginx.conf  xray-client.json.tmpl  xray-server.json.tmpl
tests/interop/keys/: private.key  public.key  short_id.txt
tests/interop/scripts/: assert_ja3.sh  run_pcap.sh  wait_for_port.sh
tests/loom/: concurrency.rs
tests/observability/: mod.rs
tests/perf/: README.md
tests/reload/: mod.rs
tests/resource_limits/: exhaustion.rs
tests/security/: mod.rs
tests/soak/: README.md
tests/socket/: mod.rs
tests/src/: lib.rs
tests/tests/: adversarial_backpressure.rs  adversarial_cancellation.rs  adversarial_fragmentation.rs  adversarial_half_close.rs  adversarial_large_frames.rs  adversarial_task_pressure.rs  adversarial_upstream_chaos.rs  e2e_health_failover.rs  e2e_hostility.rs  e2e_http_connect.rs  e2e_http_vmess_grpc.rs  e2e_hysteria2.rs  e2e_hysteria2_udp.rs  e2e_hysteria2_vless.rs  e2e_phase2_reality.rs  e2e_phase3_hysteria2.rs  e2e_phase4_vless_httpupgrade.rs  e2e_phase4_vless_ws.rs  e2e_phase5_http_vmess_grpc.rs  e2e_phase5_vless_vision.rs  e2e_phase6_ss2022_local.rs  e2e_phase6_vless_quic.rs  e2e_phase6_vless_splithttp.rs  e2e_phase7_shadowtls.rs  e2e_phase8_mkcp.rs  e2e_reality.rs  e2e_reality_vless.rs  e2e_socks5_udp.rs  e2e_socks5_vless.rs  e2e_ss2022.rs  e2e_ss2022_local.rs  e2e_ss2022_udp.rs  e2e_trojan.rs  e2e_trojan_udp.rs  e2e_trojan_udp_outbound.rs  e2e_vless_httpupgrade.rs  e2e_vless_mkcp.rs  e2e_vless_mux.rs  e2e_vless_quic.rs  e2e_vless_shadowtls.rs  (+19 more)
tests/tests/e2e_trojan/: common.rs  trojan.rs  vless_ws.rs  ws.rs
(+482 files in other folders)
