# Workspace root Cargo.toml.
#
# This file does two things:
#   1. Declares all the crates that make up this project (the [workspace] section).
#   2. Pins every third-party dependency to an exact version (the [workspace.dependencies]
#      section), so the whole project always builds with the same crates regardless
#      of when `cargo update` was last run.
#
# Adding a new dependency:
#   - Add it here under [workspace.dependencies] with the version you want.
#   - Then add `crate-name.workspace = true` in the individual crate's Cargo.toml.
#   - Never specify versions in individual crate Cargo.toml files — always inherit
#     from here so there is one place to update versions.

[workspace]
members = [
    "benches",
    "crates/proxy-cli",
    "crates/proxy-core",
    "crates/proxy-common",
    "crates/proxy-config",
    "crates/proxy-transport",
    "crates/proxy-protocol",
    "crates/proxy-app",
    "crates/proxy-tls",
    "crates/proxy-api",
    "tests",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["moji.ndr", "Blackwire contributors"]
rust-version = "1.85"

# ── Async runtime ──────────────────────────────────────────────────────────────
[workspace.dependencies]
tokio       = { version = "1.52", features = ["full"] }
tokio-util  = { version = "0.7", features = ["codec", "io", "net"] }
futures     = "0.3"

# ── TLS (pure Rust) ────────────────────────────────────────────────────────────
rustls      = { version = "0.23.40", default-features = false, features = ["aws_lc_rs", "tls12"] }
tokio-rustls = "0.26"
rustls-acme         = "0.15"
rcgen               = "0.14"
rustls-native-certs = "0.8"

# ── QUIC ───────────────────────────────────────────────────────────────────────
quinn       = { version = "0.11.9", features = ["runtime-tokio", "rustls-aws-lc-rs"] }
quinn-proto = { version = "0.11.14", default-features = false }
h3          = "0.0.8"
h3-quinn    = "0.0.10"

# ── WebSocket ──────────────────────────────────────────────────────────────────
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }

# ── gRPC ───────────────────────────────────────────────────────────────────────
tonic       = "0.14"
prost       = "0.14"
h2          = "0.4"
http        = "1"

# ── TUN mode ───────────────────────────────────────────────────────────────────
tun         = { version = "0.8", features = ["async"] }

# ── Crypto — pure Rust, all audited ───────────────────────────────────────────
aws-lc-rs           = "1.17"
ring                = "0.17"
aes-gcm             = "0.10"
chacha20poly1305    = "0.10"
blake3              = "1.8"
x25519-dalek        = { version = "2", features = ["getrandom", "static_secrets"] }
ed25519-dalek       = { version = "2", features = ["pkcs8", "rand_core"] }
x509-parser         = "0.18"
p256                = { version = "0.13", features = ["ecdh"] }
sha2                = "0.11"
sha1                = "0.11"
shake               = "0.1"
md-5                = "0.11"
hmac                = "0.13"
hkdf                = "0.13"
crc32fast           = "1.5"
subtle              = "2.6"

# ── UUID ───────────────────────────────────────────────────────────────────────
uuid        = { version = "1.23", features = ["v4", "v5"] }

# ── Buffers & serialisation ────────────────────────────────────────────────────
bytes       = "1.11"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# ── Async trait helpers ────────────────────────────────────────────────────────
async-trait   = "0.1"
trait-variant = "0.1"
pin-project-lite = "0.2"

# ── Config & hot-reload ────────────────────────────────────────────────────────
validator   = { version = "0.20", features = ["derive"] }
arc-swap    = "1.9"
notify      = "8"
once_cell   = "1.21"

# ── Routing & IP matching ──────────────────────────────────────────────────────
ipnet       = "2.12"
regex       = "1"
aho-corasick = "1"

# ── DNS ────────────────────────────────────────────────────────────────────────
hickory-resolver = { version = "0.26", features = ["tls-aws-lc-rs", "https-aws-lc-rs", "quic-aws-lc-rs"] }

# ── Observability ──────────────────────────────────────────────────────────────
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }
metrics             = "0.24"
metrics-exporter-prometheus = "0.18"
axum                = "0.8"

# ── Concurrency ────────────────────────────────────────────────────────────────
dashmap     = "6"
lru         = "0.18"
parking_lot = "0.12"
crossbeam-queue = "0.3"

# ── Error handling ─────────────────────────────────────────────────────────────
thiserror   = "2"
anyhow      = "1"

# ── Network & OS ───────────────────────────────────────────────────────────────
socket2     = { version = "0.6", features = ["all"] }
nix         = { version = "0.31", features = ["socket", "net", "sched", "user"] }
libc        = "0.2"

# ── Security ───────────────────────────────────────────────────────────────────
seccompiler = "0.5"
caps        = "0.5"

# ── CLI ────────────────────────────────────────────────────────────────────────
clap        = { version = "4", features = ["derive", "env"] }

# ── Misc utilities ─────────────────────────────────────────────────────────────
rand        = { version = "0.10", features = ["std", "std_rng", "thread_rng", "sys_rng"] }
rand_core   = "0.6"
hex         = "0.4"
base64      = "0.22"
num_cpus    = "1"
