[package]
name = "blackwire-benches"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
bytes.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "tcp_relay_throughput"
harness = false

[[bench]]
name = "protocol_handshake_latency"
harness = false

[[bench]]
name = "routing_dns_fakeip"
harness = false

[[bench]]
name = "framing_overhead"
harness = false
