[package]
name = "blackwire-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]
members = ["."]

[dependencies]
libfuzzer-sys = "0.4"
tokio = { version = "1.52", features = ["rt", "io-util"] }
bytes = "1"
proxy-common = { path = "../crates/proxy-common" }
proxy-protocol = { path = "../crates/proxy-protocol", features = ["fuzzing"] }
proxy-transport = { path = "../crates/proxy-transport", features = ["fuzzing"] }

[[bin]]
name = "reality_client_hello"
path = "fuzz_targets/reality_client_hello.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vmess_aead_header"
path = "fuzz_targets/vmess_aead_header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vless_header"
path = "fuzz_targets/vless_header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hysteria2_frame"
path = "fuzz_targets/hysteria2_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "shadowtls_handshake"
path = "fuzz_targets/shadowtls_handshake.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ss2022_chunk"
path = "fuzz_targets/ss2022_chunk.rs"
test = false
doc = false
bench = false

[[bin]]
name = "stateful_sequences"
path = "fuzz_targets/stateful_sequences.rs"
test = false
doc = false
bench = false
