[package]
name        = "integration-tests"
description = "Integration and golden vector tests for the proxy platform."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
heavy-tests = []
loom-tests = []

# This crate only contains tests — the binary is empty.
# `cargo test -p integration-tests` runs all tests in this crate.

[dev-dependencies]
blackwire-common     = { path = "../crates/blackwire-common" }
blackwire-config     = { path = "../crates/blackwire-config" }
blackwire-app        = { path = "../crates/blackwire-app" }
blackwire-protocol   = { path = "../crates/blackwire-protocol" }
blackwire-core       = { path = "../crates/blackwire-core" }
blackwire-transport  = { path = "../crates/blackwire-transport" }

tokio.workspace     = true
anyhow.workspace    = true
hex.workspace       = true
serde_json.workspace = true
tracing-subscriber.workspace = true
rcgen.workspace        = true
quinn.workspace        = true
x25519-dalek.workspace = true
rand.workspace         = true
uuid.workspace         = true
http.workspace         = true
h2.workspace           = true
loom = "0.7"
async-trait.workspace = true
bytes.workspace = true
socket2.workspace = true
blake3.workspace = true
aes-gcm.workspace = true

[lib]
name = "integration_tests"
path = "src/lib.rs"
