[package]
name = "black-ui-server"
description = "Local Blackwire control panel API and static frontend server."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "black-ui"
path = "src/main.rs"

[dependencies]
blackwire-api = { path = "../../crates/blackwire-api" }
blackwire-config = { path = "../../crates/blackwire-config" }

anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
hex.workspace = true
prost.workspace = true
rand.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tonic.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
validator.workspace = true
