[package]
name        = "proxy-api"
description = "gRPC management and statistics API — exposes runtime metrics over the v2ray StatsService protocol."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
proxy-common    = { path = "../proxy-common" }
proxy-app       = { path = "../proxy-app" }
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace   = true
