[package]
name        = "proxy-config"
description = "Configuration schema, JSON parsing, validation, env-var substitution, and hot-reload."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
proxy-common          = { path = "../proxy-common" }
serde.workspace       = true
serde_json.workspace  = true
validator.workspace   = true
arc-swap.workspace    = true
notify.workspace      = true
once_cell.workspace   = true
regex.workspace       = true
tokio.workspace       = true
thiserror.workspace   = true
tracing.workspace     = true
anyhow.workspace      = true
ipnet.workspace       = true
