[package]
name        = "blackwire"
description = "Command-line binary for the proxy platform."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "blackwire"
path = "src/main.rs"

[dependencies]
proxy-common    = { path = "../proxy-common" }
proxy-config    = { path = "../proxy-config" }
proxy-core      = { path = "../proxy-core" }
proxy-app       = { path = "../proxy-app" }

tokio.workspace              = true
clap.workspace               = true
tracing.workspace            = true
tracing-subscriber.workspace = true
anyhow.workspace             = true
serde_json.workspace         = true
rand.workspace               = true
hex.workspace                = true
x25519-dalek.workspace       = true
uuid.workspace               = true
num_cpus.workspace           = true
metrics-exporter-prometheus.workspace = true
axum.workspace               = true
