[package]
name        = "proxy-core"
description = "Instance lifecycle and feature registry. Owns the running inbounds, outbounds, dispatcher, and router."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
proxy-common          = { path = "../proxy-common" }
proxy-config          = { path = "../proxy-config" }
proxy-app             = { path = "../proxy-app" }
proxy-transport       = { path = "../proxy-transport" }
proxy-protocol        = { path = "../proxy-protocol" }

dashmap.workspace    = true
tokio.workspace       = true
async-trait.workspace = true
arc-swap.workspace    = true
thiserror.workspace   = true
tracing.workspace     = true
anyhow.workspace      = true
uuid.workspace        = true
serde_json.workspace  = true
hex.workspace         = true
metrics.workspace     = true
rand.workspace        = true
